# letuchka_3

./: CMakeLists.txt  in_3.txt  in_4.txt  in_5.txt  in_6.txt  job.cpp  job.h  main.cpp
Tests/: tests.cpp
files/: in_4.txt  in_5.txt  in_6.txt
testODIN/: in_3.txt
